SERVER-37339 Sharding state is set to initialized on Grid before sharding components are fully initialized